--- a/03-Jupyter-Notebook-Numpy-and-Matplotlib/02-Magic-Commands/02-Magic-Commands.ipynb
+++ b/03-Jupyter-Notebook-Numpy-and-Matplotlib/02-Magic-Commands/02-Magic-Commands.ipynb
@@ -16,8 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-17T23:38:23.341866900Z",
+     "start_time": "2023-07-17T23:38:23.221378300Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -34,18 +39,23 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-17T23:38:40.482942600Z",
+     "start_time": "2023-07-17T23:38:40.479952400Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello iMooc !\n"
+      "Hello iMooc1 !\n"
      ]
     }
    ],
    "source": [
-    "hello(\"iMooc\")"
+    "hello(\"iMooc1\")"
    ]
   },
   {
