--- a/03-Jupyter-Notebook-Numpy-and-Matplotlib/03-Numpy-Array-Basics/03-Numpy-Array-Basics.ipynb
+++ b/03-Jupyter-Notebook-Numpy-and-Matplotlib/03-Numpy-Array-Basics/03-Numpy-Array-Basics.ipynb
@@ -9,9 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-18T00:00:41.380571500Z",
+     "start_time": "2023-07-18T00:00:41.296847800Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -20,16 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T00:00:41.380571500Z",
+     "start_time": "2023-07-18T00:00:41.304332100Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "'1.12.1'"
-      ]
+      "text/plain": "'1.25.1'"
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,9 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-18T00:00:41.381564200Z",
+     "start_time": "2023-07-18T00:00:41.306328800Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -51,16 +62,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T00:00:41.381564200Z",
+     "start_time": "2023-07-18T00:00:41.324338600Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "'1.12.1'"
-      ]
+      "text/plain": "'1.25.1'"
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,16 +92,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T00:00:41.381564200Z",
+     "start_time": "2023-07-18T00:00:41.339369200Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
-      ]
+      "text/plain": "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,16 +116,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T00:00:41.382560800Z",
+     "start_time": "2023-07-18T00:00:41.354183400Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "5"
-      ]
+      "text/plain": "5"
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,16 +139,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T00:00:41.389057600Z",
+     "start_time": "2023-07-18T00:00:41.368608900Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "[0, 1, 2, 3, 4, 100, 6, 7, 8, 9]"
-      ]
+      "text/plain": "[0, 1, 2, 3, 4, 100, 6, 7, 8, 9]"
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,16 +163,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T00:00:41.399804800Z",
+     "start_time": "2023-07-18T00:00:41.384559800Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "[0, 1, 2, 3, 4, 'Machine Learning', 6, 7, 8, 9]"
-      ]
+      "text/plain": "[0, 1, 2, 3, 4, 'Machine Learning', 6, 7, 8, 9]"
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,16 +194,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T00:00:41.472803400Z",
+     "start_time": "2023-07-18T00:00:41.400801100Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array('i', [0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
-      ]
+      "text/plain": "array('i', [0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,16 +219,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T00:00:41.473795900Z",
+     "start_time": "2023-07-18T00:00:41.418374900Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "5"
-      ]
+      "text/plain": "5"
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,16 +242,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T00:00:41.473795900Z",
+     "start_time": "2023-07-18T00:00:41.433960600Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array('i', [0, 1, 2, 3, 4, 100, 6, 7, 8, 9])"
-      ]
+      "text/plain": "array('i', [0, 1, 2, 3, 4, 100, 6, 7, 8, 9])"
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,18 +266,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T00:00:41.473795900Z",
+     "start_time": "2023-07-18T00:00:41.446750100Z"
+    }
+   },
    "outputs": [
     {
      "ename": "TypeError",
-     "evalue": "an integer is required (got type str)",
+     "evalue": "'str' object cannot be interpreted as an integer",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-e74bffddd7b6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0marr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Machine Learning\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: an integer is required (got type str)"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[17], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43marr\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m5\u001B[39;49m\u001B[43m]\u001B[49m \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mMachine Learning\u001B[39m\u001B[38;5;124m\"\u001B[39m\n",
+      "\u001B[1;31mTypeError\u001B[0m: 'str' object cannot be interpreted as an integer"
      ]
     }
    ],
@@ -252,18 +292,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T00:02:04.296769900Z",
+     "start_time": "2023-07-18T00:02:04.245880Z"
+    }
+   },
    "outputs": [
     {
      "ename": "TypeError",
-     "evalue": "integer argument expected, got float",
+     "evalue": "'float' object cannot be interpreted as an integer",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-f30bba6fbd5a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0marr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m5.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: integer argument expected, got float"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[18], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43marr\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m5\u001B[39;49m\u001B[43m]\u001B[49m \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m5.0\u001B[39m\n",
+      "\u001B[1;31mTypeError\u001B[0m: 'float' object cannot be interpreted as an integer"
      ]
     }
    ],
@@ -287,16 +332,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T00:02:08.846881400Z",
+     "start_time": "2023-07-18T00:02:08.811922700Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
-      ]
+      "text/plain": "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,16 +356,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T00:02:16.564342200Z",
+     "start_time": "2023-07-18T00:02:16.555768100Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([  0,   1,   2,   3,   4, 100,   6,   7,   8,   9])"
-      ]
+      "text/plain": "array([  0,   1,   2,   3,   4, 100,   6,   7,   8,   9])"
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,17 +381,22 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T00:02:23.005403Z",
+     "start_time": "2023-07-18T00:02:22.939570800Z"
+    }
+   },
    "outputs": [
     {
      "ename": "ValueError",
      "evalue": "invalid literal for int() with base 10: 'Machine Learning'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-df6cd071861b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnparr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Machine Learning\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'Machine Learning'"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[21], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mnparr\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m5\u001B[39;49m\u001B[43m]\u001B[49m \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mMachine Learning\u001B[39m\u001B[38;5;124m\"\u001B[39m\n",
+      "\u001B[1;31mValueError\u001B[0m: invalid literal for int() with base 10: 'Machine Learning'"
      ]
     }
    ],
@@ -350,16 +406,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T00:02:25.168517200Z",
+     "start_time": "2023-07-18T00:02:25.151012600Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "dtype('int64')"
-      ]
+      "text/plain": "dtype('int32')"
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,16 +429,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T00:02:31.361342100Z",
+     "start_time": "2023-07-18T00:02:31.357845700Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
-      ]
+      "text/plain": "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,16 +453,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T00:02:34.090382400Z",
+     "start_time": "2023-07-18T00:02:34.083893700Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "dtype('int64')"
-      ]
+      "text/plain": "dtype('int32')"
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,16 +476,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T00:02:44.075751700Z",
+     "start_time": "2023-07-18T00:02:44.066255400Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([0, 1, 2, 3, 4, 3, 6, 7, 8, 9])"
-      ]
+      "text/plain": "array([0, 1, 2, 3, 4, 3, 6, 7, 8, 9])"
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,16 +500,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T00:02:48.425798600Z",
+     "start_time": "2023-07-18T00:02:48.417634900Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "dtype('float64')"
-      ]
+      "text/plain": "dtype('float64')"
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
