--- a/03-Jupyter-Notebook-Numpy-and-Matplotlib/05-Numpy-Array-Basic-Operations/05-Numpy-Array-Basic-Operations.ipynb
+++ b/03-Jupyter-Notebook-Numpy-and-Matplotlib/05-Numpy-Array-Basic-Operations/05-Numpy-Array-Basic-Operations.ipynb
@@ -49,7 +49,7 @@
    },
    "outputs": [],
    "source": [
-    "X = np.arange(15).reshape((3, 5))"
+    "X = np.arange(15).reshape((3, 5)) #先生成一个一维数组，再转为二维数组"
    ]
   },
   {
@@ -98,7 +98,7 @@
     }
    ],
    "source": [
-    "x.ndim"
+    "x.ndim  # 几维的数组"
    ]
   },
   {
@@ -634,7 +634,7 @@
     }
    ],
    "source": [
-    "X[0, :]"
+    "X[0, :] #只取第一行"
    ]
   },
   {
@@ -654,7 +654,7 @@
     }
    ],
    "source": [
-    "X[:, 0]"
+    "X[:, 0]#只取一列，:代表取所有的行，后面的0代表只要第一列"
    ]
   },
   {
@@ -782,7 +782,7 @@
    },
    "outputs": [],
    "source": [
-    "subX = X[:2, :3].copy()"
+    "subX = X[:2, :3].copy() #这样获取到的是原矩阵的复制品"
    ]
   },
   {
@@ -1066,7 +1066,7 @@
     }
    ],
    "source": [
-    "x.reshape(10, -1)"
+    "x.reshape(10, -1)#我只想要10行，列数是几不管"
    ]
   },
   {
@@ -1100,10 +1100,10 @@
      "evalue": "cannot reshape array of size 10 into shape (3,newaxis)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-53-12a588b09f7f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 10 into shape (3,newaxis)"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-53-12a588b09f7f>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m()\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0mx\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mreshape\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m3\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m-\u001B[0m\u001B[0;36m1\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;31mValueError\u001B[0m: cannot reshape array of size 10 into shape (3,newaxis)"
      ]
     }
    ],
