--- a/03-Jupyter-Notebook-Numpy-and-Matplotlib/08-Aggregation-Operator-in-Numpy/08-Aggregation-Operator-in-Numpy.ipynb
+++ b/03-Jupyter-Notebook-Numpy-and-Matplotlib/08-Aggregation-Operator-in-Numpy/08-Aggregation-Operator-in-Numpy.ipynb
@@ -17,13 +17,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:44:32.913492300Z",
+     "start_time": "2023-07-18T04:44:31.679402300Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "52.675554310672098"
-      ]
+      "text/plain": "48.809699218405164"
      },
      "execution_count": 1,
      "metadata": {},
@@ -40,13 +43,16 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:44:37.127205700Z",
+     "start_time": "2023-07-18T04:44:37.079096300Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "52.675554310672105"
-      ]
+      "text/plain": "48.80969921840518"
      },
      "execution_count": 2,
      "metadata": {},
@@ -60,14 +66,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:44:44.880449800Z",
+     "start_time": "2023-07-18T04:44:39.669463500Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 loops, best of 3: 173 ms per loop\n",
-      "1000 loops, best of 3: 1.02 ms per loop\n"
+      "40.4 ms ± 502 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "220 µs ± 2.83 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
@@ -87,13 +98,16 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:44:50.081537400Z",
+     "start_time": "2023-07-18T04:44:50.069868600Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "2.2765289564574687e-07"
-      ]
+      "text/plain": "5.210161986290984e-07"
      },
      "execution_count": 4,
      "metadata": {},
@@ -107,13 +121,16 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:44:56.506194500Z",
+     "start_time": "2023-07-18T04:44:56.484380900Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "0.99999686126703025"
-      ]
+      "text/plain": "0.9999983485822429"
      },
      "execution_count": 5,
      "metadata": {},
@@ -127,13 +144,16 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:44:59.463172500Z",
+     "start_time": "2023-07-18T04:44:59.421219300Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "2.2765289564574687e-07"
-      ]
+      "text/plain": "5.210161986290984e-07"
      },
      "execution_count": 6,
      "metadata": {},
@@ -147,13 +167,16 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:45:02.290671700Z",
+     "start_time": "2023-07-18T04:45:02.268493400Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "0.99999686126703025"
-      ]
+      "text/plain": "0.9999983485822429"
      },
      "execution_count": 7,
      "metadata": {},
@@ -167,13 +190,16 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:45:04.347531600Z",
+     "start_time": "2023-07-18T04:45:04.330326700Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "500454.89231729991"
-      ]
+      "text/plain": "499565.62545515737"
      },
      "execution_count": 8,
      "metadata": {},
@@ -194,16 +220,16 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:45:09.188623600Z",
+     "start_time": "2023-07-18T04:45:09.134519400Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[ 0,  1,  2,  3],\n",
-       "       [ 4,  5,  6,  7],\n",
-       "       [ 8,  9, 10, 11],\n",
-       "       [12, 13, 14, 15]])"
-      ]
+      "text/plain": "array([[ 0,  1,  2,  3],\n       [ 4,  5,  6,  7],\n       [ 8,  9, 10, 11],\n       [12, 13, 14, 15]])"
      },
      "execution_count": 9,
      "metadata": {},
@@ -218,13 +244,16 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:45:16.758486Z",
+     "start_time": "2023-07-18T04:45:16.743593Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "120"
-      ]
+      "text/plain": "120"
      },
      "execution_count": 10,
      "metadata": {},
@@ -238,13 +267,16 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:45:18.785438Z",
+     "start_time": "2023-07-18T04:45:18.772536700Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([24, 28, 32, 36])"
-      ]
+      "text/plain": "array([24, 28, 32, 36])"
      },
      "execution_count": 11,
      "metadata": {},
@@ -252,7 +284,7 @@
     }
    ],
    "source": [
-    "np.sum(X, axis=0)"
+    "np.sum(X, axis=0) # 沿着行的方向计算，这里计算的是每列的和"
    ]
   },
   {
@@ -326,7 +358,7 @@
     }
    ],
    "source": [
-    "np.prod(X + 1)"
+    "np.prod(X + 1) # 所有元素的乘积"
    ]
   },
   {
@@ -346,7 +378,7 @@
     }
    ],
    "source": [
-    "np.mean(X)"
+    "np.mean(X) # 平均"
    ]
   },
   {
@@ -366,7 +398,7 @@
     }
    ],
    "source": [
-    "np.median(X)"
+    "np.median(X) #中位数"
    ]
   },
   {
@@ -427,7 +459,7 @@
     }
    ],
    "source": [
-    "np.percentile(big_array, q=50)"
+    "np.percentile(big_array, q=50) # 百分位 这里代表百分之50的元素都是小于。。。"
    ]
   },
   {
@@ -549,7 +581,7 @@
     }
    ],
    "source": [
-    "np.std(big_array)"
+    "np.std(big_array) #标准差"
    ]
   },
   {
