--- a/04-kNN/03-Test-Our-Algorithm/03-Test-Our-Algorithm.ipynb
+++ b/04-kNN/03-Test-Our-Algorithm/03-Test-Our-Algorithm.ipynb
@@ -9,9 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:08:55.713968600Z",
+     "start_time": "2023-07-19T00:08:54.518733Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -22,16 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:09:01.528829Z",
+     "start_time": "2023-07-19T00:09:01.456911500Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "dict_keys(['data', 'target', 'target_names', 'DESCR', 'feature_names'])"
-      ]
+      "text/plain": "dict_keys(['data', 'target', 'frame', 'target_names', 'DESCR', 'feature_names', 'filename', 'data_module'])"
      },
-     "execution_count": 65,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,9 +50,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:09:06.284945900Z",
+     "start_time": "2023-07-19T00:09:06.268925400Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -54,9 +65,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:09:07.125344Z",
+     "start_time": "2023-07-19T00:09:07.113907100Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -65,16 +80,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:09:07.928694200Z",
+     "start_time": "2023-07-19T00:09:07.925192200Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "(150, 4)"
-      ]
+      "text/plain": "(150, 4)"
      },
-     "execution_count": 68,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,16 +103,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:09:10.472742200Z",
+     "start_time": "2023-07-19T00:09:10.453443400Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "(150,)"
-      ]
+      "text/plain": "(150,)"
      },
-     "execution_count": 69,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,53 +137,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:09:18.688671Z",
+     "start_time": "2023-07-19T00:09:18.675714200Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
-       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
-       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
-      ]
+      "text/plain": "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n       0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
      },
-     "execution_count": 70,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y"
+    "y #通过打印可以知道，y是排好序的"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:12:12.256176400Z",
+     "start_time": "2023-07-19T00:12:12.239110600Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([ 69,  11,   5,   9,  12, 148, 111,  34,  73, 104, 108,  47,  60,\n",
-       "       102,  95,  75, 139, 110,  55,  77,  49,   6,  92,  32, 124,  21,\n",
-       "       127, 130,  66,  58,  63,   0,  80, 144,  97,   1,   8,  79, 123,\n",
-       "       101,  50,  23,  90,  56,  19, 149, 142,  57,  72, 147,  86, 145,\n",
-       "        15,  91,   4,  62,  41,  39, 135, 112, 115,  38, 138,  33, 125,\n",
-       "       134,  35,  87,  26, 114,  61, 143, 103,  43,  82, 140, 141,  30,\n",
-       "        78, 146,  10,  22,  51, 122,  18,  31, 113, 131, 129,   7,  65,\n",
-       "        59,  36,  85,  81,  28, 116, 118,  83,  67,  52, 109, 119,  16,\n",
-       "        25,   2, 136,  94,  93,  45, 132,  76,  71,  99,  54,  20,  96,\n",
-       "         3, 117,  64, 128, 120,  48,  46,  13, 126,  88,  53,  68, 107,\n",
-       "       121,  40,  29, 133,  89,  44,  42,  98, 137,  17, 100,  84,  24,\n",
-       "        27,  74, 106,  37,  14,  70, 105])"
-      ]
+      "text/plain": "array([143,   9,  77,  68, 121,  93,  56,  99, 110, 112,  25,  29,  36,\n        19, 107, 129,  60, 120,   4, 122,  62,  92, 128, 126,  78, 127,\n       124,   7,   1,  66,  38,  80,  72, 119, 140, 101, 118, 149, 111,\n        31,  71,  46,  82, 115, 147,  94,  34,  83, 106,  90, 136,  85,\n        44,  16, 109, 141, 131,  88,  97,  81, 138, 134, 139, 117, 142,\n        30, 114, 132,  91,  73,  28,  41,  45, 135,  61, 133,  12,  11,\n        53, 145,  18,  58, 146,  39, 130,  33,  64,  86, 123, 137, 125,\n        95, 103,  54,  96,  74,  52,  79,  15, 148,  17,  50,  67,   6,\n        37,  40,  24,   8,  76,  47, 116,  14,  59,  35,  42,  20,  87,\n        98, 104,  26,  22,   3, 144, 102,   5,  43,  69,  48,  70,   2,\n       105,  23, 108,  51,  49,  55,  65,  10,  57,  13,  21, 100,  89,\n        27,  32,  63, 113,  84,  75,   0])"
      },
-     "execution_count": 71,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,9 +184,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:12:24.142025600Z",
+     "start_time": "2023-07-19T00:12:24.135047800Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -186,9 +200,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:12:44.786491300Z",
+     "start_time": "2023-07-19T00:12:44.778599800Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -198,9 +216,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:12:46.969158900Z",
+     "start_time": "2023-07-19T00:12:46.953371800Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -213,8 +235,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:12:49.497034200Z",
+     "start_time": "2023-07-19T00:12:49.478236700Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -232,9 +259,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:12:51.593062Z",
+     "start_time": "2023-07-19T00:12:51.587168900Z"
+    }
    },
    "outputs": [
     {
@@ -260,9 +291,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:13:36.931149500Z",
+     "start_time": "2023-07-19T00:13:36.887987400Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -273,8 +308,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:13:38.891880Z",
+     "start_time": "2023-07-19T00:13:38.884903100Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -292,8 +332,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:13:41.274708800Z",
+     "start_time": "2023-07-19T00:13:41.258011600Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -318,9 +363,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:15:46.919571900Z",
+     "start_time": "2023-07-19T00:15:46.868000400Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -333,17 +382,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:15:49.675294700Z",
+     "start_time": "2023-07-19T00:15:49.664258700Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([2, 1, 0, 0, 0, 0, 1, 1, 2, 2, 0, 0, 0, 2, 2, 0, 1, 2, 1, 1, 0, 1, 0,\n",
-       "       1, 1, 2, 2, 0, 0, 1])"
-      ]
+      "text/plain": "array([0, 1, 2, 1, 0, 2, 1, 0, 1, 0, 0, 2, 1, 1, 2, 2, 0, 1, 1, 0, 0, 0,\n       1, 2, 1, 2, 0, 2, 0, 1])"
      },
-     "execution_count": 87,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,17 +405,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:15:51.657627Z",
+     "start_time": "2023-07-19T00:15:51.647291900Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([2, 1, 0, 0, 0, 0, 1, 1, 1, 2, 0, 0, 0, 2, 2, 0, 1, 2, 1, 1, 0, 1, 0,\n",
-       "       1, 1, 2, 2, 0, 0, 1])"
-      ]
+      "text/plain": "array([0, 1, 2, 1, 0, 2, 1, 0, 1, 0, 0, 2, 1, 1, 2, 2, 0, 1, 1, 0, 0, 0,\n       1, 2, 1, 2, 0, 1, 0, 1])"
      },
-     "execution_count": 88,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,16 +428,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:15:54.652379400Z",
+     "start_time": "2023-07-19T00:15:54.635420800Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "29"
-      ]
+      "text/plain": "29"
      },
-     "execution_count": 90,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,16 +451,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:15:57.893866100Z",
+     "start_time": "2023-07-19T00:15:57.886296300Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "0.96666666666666667"
-      ]
+      "text/plain": "0.9666666666666667"
      },
-     "execution_count": 91,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,16 +481,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:17:58.462527500Z",
+     "start_time": "2023-07-19T00:17:58.399497500Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "<function sklearn.model_selection._split.train_test_split>"
-      ]
+      "text/plain": "<function sklearn.model_selection._split.train_test_split(*arrays, test_size=None, train_size=None, random_state=None, shuffle=True, stratify=None)>"
      },
-     "execution_count": 92,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,9 +506,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:18:00.858191300Z",
+     "start_time": "2023-07-19T00:18:00.814395700Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -455,8 +521,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:18:01.689546200Z",
+     "start_time": "2023-07-19T00:18:01.684177100Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -474,8 +545,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:18:04.010555100Z",
+     "start_time": "2023-07-19T00:18:04.004593600Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
