--- a/04-kNN/05-Hyper-Parameters/05-Hyper-Parameters.ipynb
+++ b/04-kNN/05-Hyper-Parameters/05-Hyper-Parameters.ipynb
@@ -9,9 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:31:09.998315400Z",
+     "start_time": "2023-07-19T00:31:09.551534900Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -21,9 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:33:39.013030800Z",
+     "start_time": "2023-07-19T00:33:38.973960400Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -34,9 +42,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:33:40.919498300Z",
+     "start_time": "2023-07-19T00:33:40.839688300Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -47,16 +59,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:33:48.534266600Z",
+     "start_time": "2023-07-19T00:33:48.298607100Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "0.98888888888888893"
-      ]
+      "text/plain": "0.9916666666666667"
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,15 +93,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:34:26.333362700Z",
+     "start_time": "2023-07-19T00:34:26.216421600Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best_k = 4\n",
-      "best_score = 0.991666666667\n"
+      "best_k = 3\n",
+      "best_score = 0.9916666666666667\n"
      ]
     }
    ],
@@ -101,7 +121,7 @@
     "        best_k = k\n",
     "        best_score = score\n",
     "        \n",
-    "print(\"best_k =\", best_k)\n",
+    "print(\"best_k =\", best_k) #如果这里找到的k是10的情况下，建议在8~20之间再搜索一次\n",
     "print(\"best_score =\", best_score)"
    ]
   },
@@ -114,16 +134,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:39:29.795127400Z",
+     "start_time": "2023-07-19T00:39:29.494233900Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "best_method = uniform\n",
-      "best_k = 4\n",
-      "best_score = 0.991666666667\n"
+      "best_k = 3\n",
+      "best_score = 0.9916666666666667\n"
      ]
     }
    ],
@@ -148,16 +173,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:44:00.371287700Z",
+     "start_time": "2023-07-19T00:44:00.306538800Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "0.98333333333333328"
-      ]
+      "text/plain": "0.9861111111111112"
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,8 +205,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-19T00:44:07.470106900Z",
+     "start_time": "2023-07-19T00:44:04.592821200Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -186,7 +219,7 @@
      "text": [
       "best_k = 3\n",
       "best_p = 2\n",
-      "best_score = 0.988888888889\n"
+      "best_score = 0.9916666666666667\n"
      ]
     }
    ],
