--- a/10-Classification-Performance-Measures/03-Implement-Confusion-Matrix-Precision-and-Recall/03-Implement-Confusion-Matrix-Precision-and-Recall.ipynb
+++ b/10-Classification-Performance-Measures/03-Implement-Confusion-Matrix-Precision-and-Recall/03-Implement-Confusion-Matrix-Precision-and-Recall.ipynb
@@ -11,7 +11,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-21T00:33:46.624227300Z",
+     "start_time": "2023-07-21T00:33:41.198611900Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -23,23 +27,31 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-21T00:33:56.031047600Z",
+     "start_time": "2023-07-21T00:33:55.916636100Z"
+    }
    },
    "outputs": [],
    "source": [
     "digits = datasets.load_digits()\n",
     "X = digits.data\n",
     "y = digits.target.copy()\n",
-    "\n",
+    "# 人工制造比较偏斜的数据集\n",
     "y[digits.target==9] = 1\n",
-    "y[digits.target!=9] = 0"
+    "y[digits.target!=9] = 0  # 不等于9的数字统一打tag为0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-21T00:33:58.218863200Z",
+     "start_time": "2023-07-21T00:33:57.735608900Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -51,13 +63,16 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-21T00:34:08.078076800Z",
+     "start_time": "2023-07-21T00:34:06.496277100Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "0.97555555555555551"
-      ]
+      "text/plain": "0.9755555555555555"
      },
      "execution_count": 4,
      "metadata": {},
@@ -67,16 +82,20 @@
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "log_reg = LogisticRegression()\n",
+    "log_reg = LogisticRegression(n_jobs=-1)\n",
     "log_reg.fit(X_train, y_train)\n",
     "log_reg.score(X_test, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-21T00:34:38.279145700Z",
+     "start_time": "2023-07-21T00:34:38.264195600Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -85,16 +104,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-21T00:34:40.097762700Z",
+     "start_time": "2023-07-21T00:34:40.071844400Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "403"
-      ]
+      "text/plain": "403"
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,16 +131,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-21T00:35:21.538719400Z",
+     "start_time": "2023-07-21T00:35:21.522645900Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "2"
-      ]
+      "text/plain": "2"
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,16 +158,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-21T00:35:35.154515900Z",
+     "start_time": "2023-07-21T00:35:35.142523200Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "9"
-      ]
+      "text/plain": "9"
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,16 +185,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-21T00:35:46.915683900Z",
+     "start_time": "2023-07-21T00:35:46.903601600Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "36"
-      ]
+      "text/plain": "36"
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,17 +212,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-21T00:35:49.930586400Z",
+     "start_time": "2023-07-21T00:35:49.886283700Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[403,   2],\n",
-       "       [  9,  36]])"
-      ]
+      "text/plain": "array([[403,   2],\n       [  9,  36]])"
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,16 +241,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-21T00:36:03.331675300Z",
+     "start_time": "2023-07-21T00:36:03.308600100Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "0.94736842105263153"
-      ]
+      "text/plain": "0.9473684210526315"
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,16 +272,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-21T00:36:11.602572900Z",
+     "start_time": "2023-07-21T00:36:11.592761100Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "0.80000000000000004"
-      ]
+      "text/plain": "0.8"
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
