--- a/03-Jupyter-Notebook-Numpy-and-Matplotlib/04-Create-Numpy-Array/04-Create-Numpy-Array.ipynb
+++ b/03-Jupyter-Notebook-Numpy-and-Matplotlib/04-Create-Numpy-Array/04-Create-Numpy-Array.ipynb
@@ -301,10 +301,10 @@
      "evalue": "'float' object cannot be interpreted as an integer",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-43-d0579096bf02>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'float' object cannot be interpreted as an integer"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-43-d0579096bf02>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m()\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0;34m[\u001B[0m\u001B[0mi\u001B[0m \u001B[0;32mfor\u001B[0m \u001B[0mi\u001B[0m \u001B[0;32min\u001B[0m \u001B[0mrange\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m0\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;36m1\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;36m0.2\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;31mTypeError\u001B[0m: 'float' object cannot be interpreted as an integer"
      ]
     }
    ],
@@ -438,7 +438,7 @@
     }
    ],
    "source": [
-    "np.linspace(0, 20, 10)"
+    "np.linspace(0, 20, 10) #最后一个参数不是步长，是分段数，平均分成10段"
    ]
   },
   {
@@ -532,7 +532,7 @@
     }
    ],
    "source": [
-    "np.random.randint(0, 10, 10)"
+    "np.random.randint(0, 10, 10) #最后一个参数代表生成几个随机数，代表生成的是向量，这里生成10个"
    ]
   },
   {
@@ -594,7 +594,7 @@
     }
    ],
    "source": [
-    "np.random.randint(0, 10, size=(3,5))"
+    "np.random.randint(0, 10, size=(3,5)) #这里代表生成一个二维的3行5列"
    ]
   },
   {
@@ -755,7 +755,7 @@
     }
    ],
    "source": [
-    "np.random.normal()"
+    "np.random.normal() #生成一个均值为0方差为1的浮点数"
    ]
   },
   {
@@ -775,7 +775,7 @@
     }
    ],
    "source": [
-    "np.random.normal(10, 100)"
+    "np.random.normal(10, 100) #指定均值为10，方差为100"
    ]
   },
   {
@@ -797,7 +797,7 @@
     }
    ],
    "source": [
-    "np.random.normal(0, 1, (3, 5))"
+    "np.random.normal(0, 1, (3, 5)) # 第三个参数代表大小"
    ]
   },
   {
