--- a/03-Jupyter-Notebook-Numpy-and-Matplotlib/09-Arg-Operation-in-Numpy/09-Arg-Operation-in-Numpy.ipynb
+++ b/03-Jupyter-Notebook-Numpy-and-Matplotlib/09-Arg-Operation-in-Numpy/09-Arg-Operation-in-Numpy.ipynb
@@ -10,7 +10,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:52:11.759165Z",
+     "start_time": "2023-07-18T04:52:11.687551700Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np"
@@ -18,9 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:52:11.805396900Z",
+     "start_time": "2023-07-18T04:52:11.761158700Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -36,36 +45,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:52:11.865337200Z",
+     "start_time": "2023-07-18T04:52:11.805396900Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "886266"
-      ]
+      "text/plain": "924142"
      },
-     "execution_count": 28,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.argmin(x)"
+    "np.argmin(x) #返回的是索引值"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:52:11.876779900Z",
+     "start_time": "2023-07-18T04:52:11.836607800Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "-4.8354963762015108"
-      ]
+      "text/plain": "0.5357058332863539"
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,16 +91,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:52:11.876779900Z",
+     "start_time": "2023-07-18T04:52:11.865337200Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "-4.8354963762015108"
-      ]
+      "text/plain": "-5.146339641727085"
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,16 +114,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:52:11.881827400Z",
+     "start_time": "2023-07-18T04:52:11.867858700Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "4851"
-      ]
+      "text/plain": "679504"
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,16 +137,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:52:11.926800300Z",
+     "start_time": "2023-07-18T04:52:11.882824Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "4.5860138951376461"
-      ]
+      "text/plain": "-1.1886200598920158"
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,16 +160,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:52:11.926800300Z",
+     "start_time": "2023-07-18T04:52:11.897612100Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "4.5860138951376461"
-      ]
+      "text/plain": "4.90903783276991"
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,16 +190,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:52:11.935297Z",
+     "start_time": "2023-07-18T04:52:11.913420100Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15])"
-      ]
+      "text/plain": "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15])"
      },
-     "execution_count": 35,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,16 +214,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:52:11.944024300Z",
+     "start_time": "2023-07-18T04:52:11.929794200Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([13,  2,  6,  7, 11, 10,  3,  4,  8,  0,  5,  1,  9, 14, 12, 15])"
-      ]
+      "text/plain": "array([ 2,  1,  7,  3,  4, 13,  0, 15,  8,  9, 11, 10, 12,  5, 14,  6])"
      },
-     "execution_count": 36,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,16 +238,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:52:12.012946400Z",
+     "start_time": "2023-07-18T04:52:11.944024300Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15])"
-      ]
+      "text/plain": "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15])"
      },
-     "execution_count": 37,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,16 +261,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:52:12.012946400Z",
+     "start_time": "2023-07-18T04:52:12.004455300Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([13,  2,  6,  7, 11, 10,  3,  4,  8,  0,  5,  1,  9, 14, 12, 15])"
-      ]
+      "text/plain": "array([ 2,  1,  7,  3,  4, 13,  0, 15,  8,  9, 11, 10, 12,  5, 14,  6])"
      },
-     "execution_count": 38,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,9 +284,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:52:12.023432400Z",
+     "start_time": "2023-07-18T04:52:12.005450800Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -256,16 +299,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:52:12.049858600Z",
+     "start_time": "2023-07-18T04:52:12.024426Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15])"
-      ]
+      "text/plain": "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15])"
      },
-     "execution_count": 40,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,19 +322,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:52:12.092862900Z",
+     "start_time": "2023-07-18T04:52:12.040038800Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[8, 8, 5, 8],\n",
-       "       [1, 2, 2, 4],\n",
-       "       [5, 5, 9, 9],\n",
-       "       [3, 9, 3, 4]])"
-      ]
+      "text/plain": "array([[8, 2, 2, 1],\n       [4, 8, 3, 7],\n       [0, 6, 8, 1],\n       [0, 8, 7, 4]])"
      },
-     "execution_count": 41,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,19 +346,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:54:03.825479300Z",
+     "start_time": "2023-07-18T04:54:03.807501800Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[1, 2, 2, 4],\n",
-       "       [3, 5, 3, 4],\n",
-       "       [5, 8, 5, 8],\n",
-       "       [8, 9, 9, 9]])"
-      ]
+      "text/plain": "array([[0, 2, 2, 1],\n       [0, 6, 3, 1],\n       [4, 8, 7, 4],\n       [8, 8, 8, 7]])"
      },
-     "execution_count": 42,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,19 +369,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
+   "execution_count": 28,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:54:06.298485800Z",
+     "start_time": "2023-07-18T04:54:06.288107300Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[5, 8, 8, 8],\n",
-       "       [1, 2, 2, 4],\n",
-       "       [5, 5, 9, 9],\n",
-       "       [3, 3, 4, 9]])"
-      ]
+      "text/plain": "array([[1, 2, 2, 8],\n       [3, 4, 7, 8],\n       [0, 1, 6, 8],\n       [0, 4, 7, 8]])"
      },
-     "execution_count": 43,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,16 +399,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:52:12.135174100Z",
+     "start_time": "2023-07-18T04:52:12.118033400Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15])"
-      ]
+      "text/plain": "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15])"
      },
-     "execution_count": 44,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,9 +422,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:52:12.155439200Z",
+     "start_time": "2023-07-18T04:52:12.135174100Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -384,16 +437,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:52:12.165084800Z",
+     "start_time": "2023-07-18T04:52:12.147990700Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([14, 15,  8,  7, 10,  4,  9,  1,  6,  5,  3, 12,  2, 11,  0, 13])"
-      ]
+      "text/plain": "array([ 7, 12, 14,  8, 13, 10,  5,  0, 15,  9,  6,  2, 11,  4,  3,  1])"
      },
-     "execution_count": 46,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,16 +460,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:52:12.223929500Z",
+     "start_time": "2023-07-18T04:52:12.165084800Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([14,  7, 12, 10,  5,  9,  8,  3,  2,  6,  4, 13, 11, 15,  0,  1])"
-      ]
+      "text/plain": "array([ 7, 15, 11, 14, 13,  6, 10,  0,  3,  9,  5, 12,  1,  4,  2,  8],\n      dtype=int64)"
      },
-     "execution_count": 47,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,16 +483,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:52:12.270785200Z",
+     "start_time": "2023-07-18T04:52:12.224926600Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([ 1,  0,  2,  3,  4,  5,  7,  8,  6,  9, 10, 12, 11, 13, 15, 14])"
-      ]
+      "text/plain": "array([ 0,  1,  2,  3,  4, 10,  5,  7,  8,  9,  6, 13, 11, 12, 14, 15])"
      },
-     "execution_count": 48,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,16 +506,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:52:12.302381200Z",
+     "start_time": "2023-07-18T04:52:12.271781600Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([ 7, 14, 12, 10,  5,  9,  3,  2,  8,  6,  4, 11, 13, 15,  1,  0])"
-      ]
+      "text/plain": "array([ 7, 15, 11, 14, 13,  5,  6,  0,  3,  9, 10,  4, 12,  1,  2,  8],\n      dtype=int64)"
      },
-     "execution_count": 49,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,19 +529,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:52:12.302381200Z",
+     "start_time": "2023-07-18T04:52:12.287781100Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[8, 8, 5, 8],\n",
-       "       [1, 2, 2, 4],\n",
-       "       [5, 5, 9, 9],\n",
-       "       [3, 9, 3, 4]])"
-      ]
+      "text/plain": "array([[8, 2, 2, 1],\n       [4, 8, 3, 7],\n       [0, 6, 8, 1],\n       [0, 8, 7, 4]])"
      },
-     "execution_count": 50,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,19 +552,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:52:12.316889700Z",
+     "start_time": "2023-07-18T04:52:12.302381200Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[2, 0, 1, 3],\n",
-       "       [0, 1, 2, 3],\n",
-       "       [0, 1, 2, 3],\n",
-       "       [0, 2, 3, 1]])"
-      ]
+      "text/plain": "array([[3, 1, 2, 0],\n       [2, 0, 3, 1],\n       [0, 3, 1, 2],\n       [0, 3, 2, 1]], dtype=int64)"
      },
-     "execution_count": 51,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,19 +575,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:52:12.342844300Z",
+     "start_time": "2023-07-18T04:52:12.316889700Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[2, 1, 0, 3],\n",
-       "       [0, 1, 2, 3],\n",
-       "       [0, 1, 2, 3],\n",
-       "       [0, 2, 3, 1]])"
-      ]
+      "text/plain": "array([[3, 1, 2, 0],\n       [2, 0, 3, 1],\n       [0, 3, 1, 2],\n       [0, 3, 2, 1]], dtype=int64)"
      },
-     "execution_count": 52,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
