--- a/03-Jupyter-Notebook-Numpy-and-Matplotlib/10-Comparison-and-Fancy-Indexing/10-Comparison-and-Fancy-Indexing.ipynb
+++ b/03-Jupyter-Notebook-Numpy-and-Matplotlib/10-Comparison-and-Fancy-Indexing/10-Comparison-and-Fancy-Indexing.ipynb
@@ -16,16 +16,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:56:56.742326800Z",
+     "start_time": "2023-07-18T04:56:56.667452500Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15])"
-      ]
+      "text/plain": "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15])"
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,16 +42,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:57:00.934787800Z",
+     "start_time": "2023-07-18T04:57:00.916740400Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "3"
-      ]
+      "text/plain": "3"
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,16 +65,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:57:06.768167200Z",
+     "start_time": "2023-07-18T04:57:06.762487600Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([3, 4, 5, 6, 7, 8])"
-      ]
+      "text/plain": "array([3, 4, 5, 6, 7, 8])"
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,16 +88,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:57:09.618013500Z",
+     "start_time": "2023-07-18T04:57:09.595489200Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([3, 5, 7])"
-      ]
+      "text/plain": "array([3, 5, 7])"
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,16 +111,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:57:19.900554400Z",
+     "start_time": "2023-07-18T04:57:19.884126800Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "[3, 5, 7]"
-      ]
+      "text/plain": "[3, 5, 7]"
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,16 +134,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:57:34.856428900Z",
+     "start_time": "2023-07-18T04:57:34.843948300Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([3, 5, 7])"
-      ]
+      "text/plain": "array([3, 5, 7])"
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,17 +158,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-18T04:57:37.137928100Z",
+     "start_time": "2023-07-18T04:57:37.134935900Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[0, 2],\n",
-       "       [1, 3]])"
-      ]
+      "text/plain": "array([[0, 2],\n       [1, 3]])"
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +721,7 @@
      "evalue": "invalid syntax (<ipython-input-45-780ca9b7c144>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-45-780ca9b7c144>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    np.sum((x > 3) && (x < 10))\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001B[0;36m  File \u001B[0;32m\"<ipython-input-45-780ca9b7c144>\"\u001B[0;36m, line \u001B[0;32m1\u001B[0m\n\u001B[0;31m    np.sum((x > 3) && (x < 10))\u001B[0m\n\u001B[0m                    ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m invalid syntax\n"
      ]
     }
    ],
